# opengl-experiment

./: .gitmodules  CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: camera.h  constants.h  game.h  hello.h  input.h  shader.h  state.h  texture.h
shaders/: fragment.glsl  fragment2.glsl  vertex.glsl
src/: camera.c  input.c  main.c  shader.c  texture.c
